# ecommerce

./: .gitignore  Dockerfile  docker-compose.yml  makefile  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 1aaf8fc36bdf_initial_migration.py  de03e457dd1a_adicionando_nova_coluna_à_tabela.py
app/: main.py
app/models/: __init__.py  base_repository.py
app/models/base_model/: base_model.py
app/settings/: __init__.py  base.py  local.py  test.py
app/system/: config.py
app/system/database/: connection.py
app/utils/: encrypt_pass.py
app/utils/models_utils/: model_save_manager.py
app/views/users/: endpoints.py  models.py  repository.py  schemas.py
tests/: __init__.py  confteste.py
tests/models/: test_base_model.py
tests/views/users/: fixtures.py  test_endpoints.py  test_repositories.py  test_user_model.py
